@@ -57,9 +57,12 @@ continuous_scale <- function(aesthetics, scale_name, palette, name = NULL, break
   if (is.null(breaks) && !is_position_aes(aesthetics) && guide != "none") {
     guide <- "none"
   }
-
+  
   trans <- as.trans(trans)
   if (!is.null(limits)) {
+      if (length(limits) == 2 & limits[1] > limits[2]) {
+        stop("Lower limit greater than upper for continuous scale")
+      }
     limits <- trans$trans(limits)
   }
 
